--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,4 +1,10 @@
 [project]
 name = "backend"
 version = "0.1.0"
-dependencies = ["fastapi", "uvicorn"]
+dependencies = [
+    "fastapi",
+    "uvicorn",
+]
+
+[tool.uv]
+managed = true
