--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,8 +2,17 @@
 name = "backend"
 version = "0.1.0"
 dependencies = [
+    "alembic>=1.17.2",
+    "asyncpg>=0.31.0",
     "fastapi",
-    "uvicorn",
+    "passlib[bcrypt]>=1.7.4",
+    "psycopg2-binary>=2.9.11",
+    "pydantic-settings>=2.12.0",
+    "python-jose[cryptography]>=3.5.0",
+    "python-multipart>=0.0.21",
+    "redis>=7.1.0",
+    "sqlalchemy[asyncio]>=2.0.45",
+    "uvicorn[standard]",
 ]
 
 [tool.uv]
