--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,14 @@ services:
     image: postgres:16-alpine
     restart: always
     environment:
-      POSTGRES_USER: ${DB_USER:-user}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-pass}
-      POSTGRES_DB: ${DB_NAME:-messenger_db}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 5s
-      timeout: 5s
       retries: 5
 
   redis:
@@ -19,31 +18,34 @@ services:
     restart: always
 
   backend:
-    build: ./backend
+    image: ghcr.io/${GITHUB_REPOSITORY}/backend:latest
     restart: always
     env_file: .env
     depends_on:
       db:
         condition: service_healthy
-      redis:
-        condition: service_started
-    ports:
-      - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql://${DB_USER:-user}:${DB_PASSWORD:-pass}@db:5432/${DB_NAME:-messenger_db}
-      - REDIS_URL=redis://redis:6379/0
+      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
 
   frontend:
-    build: ./frontend
+    image: ghcr.io/${GITHUB_REPOSITORY}/frontend:latest
     restart: always
     env_file: .env
-    ports:
-      - "3000:3000"
     environment:
-      - HOST=0.0.0.0
-      - NODE_ENV=production
-      - NUXT_PUBLIC_API_BASE=http://80.71.227.242:8000
+      - NUXT_PUBLIC_API_BASE=https://${DOMAIN}/api
+
+  nginx:
+    image: nginx:alpine
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certbot/conf:/etc/letsencrypt:ro
+      - ./certbot/www:/var/www/certbot:ro
     depends_on:
+      - frontend
       - backend
 
 volumes:
