--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,24 @@
 server {
     listen 80;
-    server_name your-domain.com; # Замените на ваш домен или IP
+    server_name _; # Замените на ваш домен, когда он будет
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name your-domain.com;
-
-    # Пути к сертификатам (появятся после запуска certbot)
-    ssl_certificate /etc/letsencrypt/live/your-domain.com;
-    ssl_certificate_key /etc/letsencrypt/live/your-domain.com;
-
     location /api/ {
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
