--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
         condition: service_started
     environment:
       - DATABASE_URL=postgresql://${DB_USER:-user}:${DB_PASSWORD:-pass}@db:5432/${DB_NAME:-messenger_db}
+    ports:
+      - "8000:8000"
 
   frontend:
     image: ghcr.io/vmolo4ke/miss/frontend:latest
