--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@types/node": "^25.0.3",
     "@vite-pwa/nuxt": "^1.1.0",
     "sass-embedded": "^1.97.1"
   }
